@@ -5,10 +5,10 @@ set_from_init_file('AFTER_BODY_OPEN', "\
 	<div class=\"top-nav darkblock\">\
        	<a href=\"http://www.nongnu.org/bsltl/index.html\">Home</a> |\
        	<a href=\"http://www.nongnu.org/bsltl/documentation.html\">Documentation</a> |\
-       	<a href=\"http://www.nongnu.org/bsltl/overview.html\">Overview</a> |\
+       	<a href=\"overview.html\">Overview</a> |\
        	<a href=\"http://www.nongnu.org/bsltl/examples.html\">Examples</a> |\
-       	<a href=\"http://git.savannah.gnu.org/cgit/bsltl.git/tree/\" target=\"_blank\">Code</a> |\
-       	<a href=\"http://download.savannah.gnu.org/releases/bsltl/\" target=\"_blank\">Download</a> |\
+       	<a href=\"http://www.nongnu.org/bsltl/code.html\" target=\"_blank\">Code</a> |\
+       	<a href=\"http://www.nongnu.org/bsltl/download.html\" target=\"_blank\">Download</a> |\
        	<a href=\"https://savannah.nongnu.org/projects/bsltl/\" target=\"_blank\">Develop</a>\
 	</div><br>\n\n");
 
